bindings/python/slh_dsa_uniffi.py


_UniffiLib = _uniffi_load_indirect()
_UniffiLib.ffi_slh_dsa_uniffi_rustbuffer_alloc.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rustbuffer_alloc.restype = _UniffiRustBuffer
_UniffiLib.ffi_slh_dsa_uniffi_rustbuffer_from_bytes.argtypes = (
    _UniffiForeignBytes,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rustbuffer_from_bytes.restype = _UniffiRustBuffer
_UniffiLib.ffi_slh_dsa_uniffi_rustbuffer_free.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rustbuffer_free.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rustbuffer_reserve.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rustbuffer_reserve.restype = _UniffiRustBuffer
_UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK = ctypes.CFUNCTYPE(None,ctypes.c_uint64,ctypes.c_int8,
)
_UNIFFI_FOREIGN_FUTURE_DROPPED_CALLBACK = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
class _UniffiForeignFutureDroppedCallbackStruct(ctypes.Structure):
    _fields_ = [
        ("handle", ctypes.c_uint64),
        ("free", _UNIFFI_FOREIGN_FUTURE_DROPPED_CALLBACK),
    ]
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_u8.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_u8.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_u8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_u8.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_u8.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_u8.restype = ctypes.c_uint8
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_u8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_u8.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_i8.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_i8.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_i8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_i8.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_i8.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_i8.restype = ctypes.c_int8
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_i8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_i8.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_u16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_u16.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_u16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_u16.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_u16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_u16.restype = ctypes.c_uint16
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_u16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_u16.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_i16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_i16.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_i16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_i16.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_i16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_i16.restype = ctypes.c_int16
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_i16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_i16.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_u32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_u32.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_u32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_u32.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_u32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_u32.restype = ctypes.c_uint32
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_u32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_u32.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_i32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_i32.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_i32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_i32.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_i32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_i32.restype = ctypes.c_int32
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_i32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_i32.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_u64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_u64.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_u64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_u64.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_u64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_u64.restype = ctypes.c_uint64
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_u64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_u64.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_i64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_i64.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_i64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_i64.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_i64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_i64.restype = ctypes.c_int64
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_i64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_i64.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_f32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_f32.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_f32.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_f32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_f32.restype = ctypes.c_float
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_f32.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_f64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_f64.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_f64.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_f64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_f64.restype = ctypes.c_double
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_f64.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_rust_buffer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_rust_buffer.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_rust_buffer.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_rust_buffer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_rust_buffer.restype = _UniffiRustBuffer
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_rust_buffer.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_void.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_poll_void.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_cancel_void.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_void.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_complete_void.restype = None
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_slh_dsa_uniffi_rust_future_free_void.restype = None
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_keypair_generate.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_keypair_generate.restype = _UniffiRustBuffer
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_parameter_name.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_parameter_name.restype = _UniffiRustBuffer
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_sign.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_sign.restype = _UniffiRustBuffer
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_sign_deterministic.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_sign_deterministic.restype = _UniffiRustBuffer
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_signature_len.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_signature_len.restype = ctypes.c_uint64
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_signing_key_len.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_signing_key_len.restype = ctypes.c_uint64
_UniffiLib.uniffi_slh_dsa_uniffi_fn_func_slh_dsa_verify.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
